# rust-daq

./: .ast-grep-ignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-quick.yaml  AGENT.md  AGENTS.md  ARCHITECTURE.md  AUTOMATION_QUICKSTART.md  BD_JULES_INTEGRATION.md  BEADS_INSTALLATION.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.suggested  CODE-GRAPH-RAG.md  COMPARISON_TO_OTHER_PROJECTS.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.backup  DEEP_RESEARCH.md  DEMO.md  DEPLOYMENT_OVERVIEW.md  DEPLOYMENT_QUEUE.md  GEMINI.md  GEMINI_ARCHITECTURAL_ANALYSIS_2025-11-11.md  HARDWARE_DRIVERS_EXAMPLE.md  HARDWARE_IN_THE_LOOP_TESTING.md  KAMEO_INTEGRATION_PLAN.md  README.md  ROLLBACK_ACTOR.md  SCREENSHOT_INTEGRATION.md  SESSION_UPDATE.md  TAILSCALE_INTEGRATION.md  build.rs  check_output.txt  devbox.json  example_elliptec_scan.yaml  example_esp300.toml  example_newport_1830c.toml  knowledge.md  (+12 more)
clients/python/: .gitignore  LAYER2_IMPLEMENTATION.md  NEW_README.md  README.md  pyproject.toml  setup.py
clients/python/tests/: __init__.py  test_client.py  test_devices.py
crates/client/: Cargo.toml
crates/client/src/: client.rs  connection.rs  lib.rs  reconnect.rs
crates/client/tests/: integration.rs
crates/comedi-sys/: Cargo.toml  build.rs  wrapper.h
crates/comedi-sys/src/: lib.rs
crates/daq-bin/: Cargo.toml  README.md
crates/daq-bin/src/: main.rs
crates/daq-client/: Cargo.toml
crates/daq-client/src/: client.rs  error.rs  lib.rs
crates/daq-client/tests/: integration.rs
crates/daq-core/: Cargo.toml  build.rs
crates/daq-core/examples/: review_check.rs  tee_bench.rs
crates/daq-core/src/: capabilities.rs  core.rs  data.rs  driver.rs  error.rs  error_recovery.rs  error_tracking.rs  feature_flags.rs  lib.rs  limits.rs  log_scrubbing.rs  modules.rs  observable.rs  parameter.rs  pipeline.rs  serial.rs  timestamp.rs
crates/daq-core/tests/: frame_observer_timing.rs
crates/daq-driver-comedi/: Cargo.toml  README.md
crates/daq-driver-comedi/benches/: comedi_benchmark.rs
crates/daq-driver-comedi/examples/: counter.rs  digital_io.rs  single_read.rs  streaming.rs
crates/daq-driver-comedi/src/: continuous.rs  device.rs  error.rs  factory.rs  lib.rs  multi_channel.rs  streaming.rs  timing.rs
crates/daq-driver-comedi/tests/: analog_loopback.rs  continuous_streaming.rs  counter_rpc_test.rs  counter_timer.rs  digital_io.rs  eom_power_sweep.rs  eom_rotator_2d_sweep.rs  eom_rotator_wavelength_3d_sweep.rs  error_handling.rs  hal_compliance.rs  hardware_smoke.rs  storage_integration.rs  waveplate_calibration_4d.rs
crates/daq-driver-generic/: Cargo.toml
crates/daq-driver-generic/src/: driver.rs  factory.rs  lib.rs  script_engine.rs
crates/daq-driver-generic/tests/: integration_tests.rs
crates/daq-driver-mock/: Cargo.toml  README.md
crates/daq-driver-mock/src/: lib.rs  mock_camera.rs  mock_daq_output.rs  mock_laser.rs  mock_power_meter.rs  mock_rotator.rs  mock_stage.rs  pattern.rs
crates/daq-driver-mock/tests/: integration.rs
crates/daq-driver-pvcam/: Cargo.toml  README.md  pvcam_audit_results.md
crates/daq-driver-pvcam/benches/: arrow_tap.rs
crates/daq-driver-pvcam/examples/: arrow_tap.rs  force_reset.rs  list_pvcam_params.rs  validate_hardware.rs
crates/daq-driver-pvcam/pvcam-sys/: Cargo.toml  build.rs  wrapper.h
crates/daq-driver-pvcam/scripts/: install_pvcam_arch.sh  manual_install_pvcam.sh
crates/daq-driver-pvcam/src/: lib.rs
crates/daq-driver-pvcam/tests/: circ_buffer_diagnostic.rs  continuous_acquisition_tier1.rs  drift_polling_leak_test.rs  driver_test.rs  exp_mode_probe.rs  extended_streaming.rs  features_test.rs  frame_loss_metrics_test.rs  frame_timing_probe.rs  hardware_smoke.rs  liveimage_200_frames.rs  metadata_test.rs  param_availability_test.rs  pyvcam_style_probe.rs  sdk_fast_stream_equiv.rs  stress_1000_frames.rs
crates/daq-driver-red-pitaya/: Cargo.toml  README.md
crates/daq-driver-red-pitaya/src/: driver.rs  lib.rs  scpi.rs
crates/daq-driver-spectra-physics/: Cargo.toml  README.md
crates/daq-driver-spectra-physics/src/: lib.rs  maitai.rs
crates/daq-driver-thorlabs/: Cargo.toml  README.md
crates/daq-driver-thorlabs/src/: ell14.rs  lib.rs  shared_ports.rs
crates/daq-drivers/: Cargo.toml
crates/daq-drivers/src/: lib.rs
crates/daq-egui/: Cargo.toml  LINE_PROFILE_INTEGRATION.md  README.md
crates/daq-egui/examples/: double_slider_demo.rs
crates/daq-egui/src/: app.rs  client.rs  connection.rs  icons.rs  lib.rs  main.rs  main_rerun.rs  reconnect.rs  settings.rs  theme.rs
crates/daq-egui/tests/: integration_tests.rs
crates/daq-examples/: Cargo.toml
crates/daq-examples/examples/: eom_power_sweep.rs  exposure_test.rs  hw_polarization_test.rs  list_params.rs  parameter_generic_access.rs  polarization_characterization.rhai  remote_stream_test.rs  roi_test.rs  scripting_demo.rs  scripting_hardware_demo.rs  trigger_test.rs  waveplate_calibration_4d_test.rhai
crates/daq-experiment/: Cargo.toml  README.md
crates/daq-experiment/src/: lib.rs  plans.rs  plans_daq.rs  plans_imperative.rs  run_engine.rs
crates/daq-experiment/tests/: uid_mismatch.rs
crates/daq-hardware/: Cargo.toml  README.md
crates/daq-hardware/src/: factory.rs  lib.rs  port_resolver.rs  registry.rs  resource_pool.rs
crates/daq-hardware/tests/: ell14_migration.rs  esp300_migration.rs  maitai_migration.rs  newport1830c_migration.rs  (+1 more)
crates/daq-plugin-api/: Cargo.toml
crates/daq-plugin-example/: Cargo.toml
crates/daq-pool/: Cargo.toml  README.md
crates/daq-proto/: Cargo.toml  build.rs
crates/daq-scripting/: Cargo.toml
crates/daq-server/: Cargo.toml
crates/daq-storage/: Cargo.toml  README.md
docs/: JULES.md  (+57 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ring_buffer_concurrent.rs  ring_buffer_wrap.rs  ring_buffer_write.rs
gui/: Cargo.toml
gui/src/: main.rs
gui/ui/: data_panel.slint  experiment_panel.slint  globals.slint  main.slint  main.slint.bak2  modules_panel.slint  modules_panel.slint.bak  modules_panel.slint.bak3  plugin_panel.slint  plugin_panel.slint.bak4  preset_panel.slint  toast.slint
python/: Cargo.toml  pyproject.toml
(+1470 files in other folders)
