[workspace]
members = [
    "pvcam-sys",
]
exclude = ["python"]

# Keep the main crate at root for compatibility
[package]
name = "rust_daq"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A modular scientific data acquisition (DAQ) application in Rust."

[workspace.package]
edition = "2021"

[lib]
name = "rust_daq"
path = "src/lib.rs"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# GUI (updated to latest to fix macOS crash)
egui = "0.29"
eframe = { version = "0.29", features = ["persistence"] }
egui_plot = "0.29"
egui_dock = "0.14"
egui_extras = "0.29"

# Data Handling
ringbuf = "0.3.3"
memmap2 = "0.9"
hdf5 = { version = "0.8.1", optional = true }
arrow = { version = "57", optional = true, features = ["ipc"] }
csv = { version = "1.3.0", optional = true }
matrw = { version = "0.1.2", optional = true }
netcdf = { version = "0.9.0", optional = true }
chrono = { version = "0.4.38", features = ["serde"] }
rustfft = "6.2.0"
num-complex = "0.4.5"

# Serialization & Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = { version = "0.14.0", features = ["toml"] }
toml = "0.8.12"
flatbuffers = "24.3.25"
# V4 configuration system
figment = { version = "0.10", features = ["toml", "env"] }

# Error Handling
anyhow = "1.0.82"
thiserror = "1.0.59"

# Scripting
rhai = { version = "1.19", features = ["sync"] }
pyo3 = { version = "0.23", features = ["auto-initialize"], optional = true }

# Logging
log = "0.4.21"
env_logger = "0.11.3"
multi_log = "0.1.2"
tracing = "0.1"
# V4 tracing infrastructure
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "ansi"] }

# CLI
clap = { version = "4.5.4", features = ["derive"] }

# Concurrency & Async
async-trait = "0.1.79"
futures = "0.3.30"

# gRPC & Protobuf (for remote control API)
tonic = "0.10"
prost = "0.12"
tokio-stream = "0.1"

# Instrument Communication
serialport = { version = "4.3.0", optional = true }
tokio-serial = { version = "5.4", optional = true }
bytes = "1.0"
pvcam-sys = { path = "pvcam-sys", optional = true }

# V4 Instrument Communication
visa-rs = { version = "0.5", optional = true }  # VISA instrument control

# Utilities
rand = "0.8.5"
opener = "0.7.0"
biquad = "0.4.1"
humantime-serde = "1.1.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
similar = "2.3"
sha2 = "0.10"
once_cell = { version = "1.21.3", features = ["std"] }

[build-dependencies]
flatbuffers = "24.3.25"
flatc-rust = "0.2"
tonic-build = "0.10"

[dev-dependencies]
tempfile = "3.10.1"
serial_test = "3.1.1"
tokio-test = "0.4"
tracing-test = "0.2"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
# NOTE: Phase 1 (bd-61) migrated to actor-based state management
# For rollback instructions, see ROLLBACK_ACTOR.md
default = ["storage_csv", "instrument_serial"]
full = ["storage_csv", "storage_hdf5", "storage_arrow", "storage_matlab", "storage_netcdf", "instrument_serial", "modules", "networking", "all_hardware"]

# Storage backends
storage_csv = ["dep:csv"]
storage_hdf5 = ["dep:hdf5"]
storage_arrow = ["dep:arrow"]
storage_matlab = ["dep:matrw"]
storage_netcdf = ["dep:netcdf"]

# Legacy instrument support
instrument_serial = ["dep:serialport"]
instrument_visa = ["dep:visa-rs"]

# V5+ Serial communication (safe async for laboratory devices)
tokio_serial = ["dep:tokio-serial", "instrument_serial"]

# V5 Hardware drivers (async, capability-based)
# Serial drivers now use tokio-serial
instrument_thorlabs = ["tokio_serial"]
instrument_newport = ["tokio_serial"]
instrument_photometrics = ["tokio_serial"]
instrument_spectra_physics = ["tokio_serial"]
instrument_newport_power_meter = ["tokio_serial"]

# Convenience feature to enable all V5 hardware drivers
all_hardware = [
    "instrument_thorlabs",
    "instrument_newport",
    "instrument_photometrics",
    "instrument_spectra_physics",
    "instrument_newport_power_meter",
]

# Phase 2 (bd-63): Networking layer with FlatBuffers protocol
networking = []

# Phase 3B (bd-64): Module system with runtime instrument assignment
modules = []

# PVCAM SDK integration (requires PVCAM SDK installed)
pvcam_hardware = ["dep:pvcam-sys", "pvcam-sys/pvcam-sdk"]
hardware_tests = []

# Camera model for tests (default: Prime BSI 2048x2048)
# Enable for Prime 95B (1200x1200) instead
prime_95b_tests = []

# Python scripting backend
scripting_python = ["dep:pyo3"]

[[bin]]
name = "rust_daq"
path = "src/main.rs"

[[bin]]
name = "discovery"
path = "tools/discovery/main.rs"
required-features = ["instrument_serial"]

[[bin]]
name = "quick_test"
path = "tools/discovery/quick_test.rs"
required-features = ["instrument_serial"]

[[bin]]
name = "script_runner"
path = "tools/script_runner/main.rs"

[[example]]
name = "test_maitai_serial"
path = "examples/test_maitai_serial.rs"
required-features = ["tokio_serial"]

# Tests removed - files do not exist
# [[test]]
# name = "storage_shutdown_test"
# path = "tests/storage_shutdown_test.rs"
#
# [[test]]
# name = "v2_instrument_test"
# path = "tests/v2_instrument_test.rs"

[[example]]
name = "grpc_server_demo"
required-features = ["networking"]

[[test]]
name = "elliptec_newport_integration"
path = "tests/elliptec_newport_integration.rs"
required-features = ["instrument_thorlabs", "instrument_newport_power_meter"]
