[workspace]
resolver = "2"
members = [
    "crates/rust-daq",
    # "crates/rust-daq/pvcam-sys", # Moved to daq-driver-pvcam
    "crates/daq-core",
    "crates/daq-pool",
    "crates/daq-plugin-api",
    "crates/daq-plugin-example",
    "crates/daq-drivers",
    "crates/daq-driver-pvcam",
    "crates/daq-driver-pvcam/pvcam-sys",
    "crates/daq-driver-comedi",
    "crates/daq-driver-mock",
    "crates/daq-driver-thorlabs",
    "crates/daq-driver-newport",
    "crates/daq-driver-spectra-physics",
    "crates/comedi-sys",
    "crates/daq-proto",
    "crates/daq-hardware",
    "crates/daq-scripting",
    "crates/daq-bin", "crates/daq-server", "crates/daq-experiment",
    "crates/daq-egui",
    # "crates/daq-examples",
]
exclude = [
    "crates/rust-daq/python",
    "crates/rust-daq/fuzz",
    # "crates/daq-bin",
    "crates/daq-examples",
]
