[package]
name = "rust-daq-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
tempfile = "3"

[dependencies.rust_daq]
path = ".."

# RingBuffer write operations fuzz target
[[bin]]
name = "ring_buffer_write"
path = "fuzz_targets/ring_buffer_write.rs"
test = false
doc = false
bench = false

# RingBuffer concurrent access fuzz target  
[[bin]]
name = "ring_buffer_concurrent"
path = "fuzz_targets/ring_buffer_concurrent.rs"
test = false
doc = false
bench = false

# RingBuffer wrap-around fuzz target
[[bin]]
name = "ring_buffer_wrap"
path = "fuzz_targets/ring_buffer_wrap.rs"
test = false
doc = false
bench = false