[build-system]
requires = ["maturin>=1.6,<1.11"]
build-backend = "maturin"

[project]
name = "rust_daq"
version = "0.1.0"
description = "Python bindings for the rust-daq high-performance DAQ system."
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.maturin]
# This tells maturin that the Python source code is in the `rust_daq` directory.
python-source = "rust_daq"
