[package]
name = "daq-bin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-daq-daemon"
path = "src/main.rs"

[dependencies]
rust_daq = { path = "../rust-daq", features = ["server", "all_hardware", "serial", "modules", "storage_csv", "mock"] }
daq-server = { path = "../daq-server" }
daq-hardware = { path = "../daq-hardware" }
daq-proto = { path = "../daq-proto" }
daq-storage = { path = "../daq-storage" }
daq-scripting = { path = "../daq-scripting" }
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1"
tokio = { version = "1.36", features = ["full"] }
mimalloc = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[features]
default = ["networking"]
networking = []
storage_hdf5 = ["rust_daq/storage_hdf5"]
storage_arrow = ["rust_daq/storage_arrow"]
# Real PVCAM SDK (requires installation)
pvcam_sdk = ["rust_daq/pvcam_sdk", "daq-hardware/pvcam_sdk"]
pvcam_hardware = ["pvcam_sdk"]

# Maitai lab profile: all hardware with real PVCAM SDK
# Use this on the maitai machine: cargo build --release -p daq-bin --features maitai
maitai = ["pvcam_hardware"]

[package.metadata.cargo-machete]
ignored = ["daq-hardware"]  # Needed for pvcam feature passthrough
