[package]
name = "daq-bin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-daq-daemon"
path = "src/main.rs"

[dependencies]
rust_daq = { path = "../rust-daq", features = ["server", "all_hardware", "serial", "modules", "storage_csv", "mock"] }
daq-server = { path = "../daq-server" }
daq-hardware = { path = "../daq-hardware" }
daq-proto = { path = "../daq-proto" }
daq-storage = { path = "../daq-storage" }
daq-scripting = { path = "../daq-scripting" }
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1"
tokio = { version = "1.36", features = ["full"] }
mimalloc = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[features]
default = ["networking"]
networking = []
storage_hdf5 = ["rust_daq/storage_hdf5"]
storage_arrow = ["rust_daq/storage_arrow"]
# Real PVCAM SDK (requires installation)
pvcam_sdk = ["rust_daq/pvcam_sdk", "daq-hardware/pvcam_sdk"]
pvcam_hardware = ["pvcam_sdk"]

# Real Comedi hardware (requires libcomedi installed)
comedi_hardware = ["rust_daq/comedi_hardware"]

# ============================================================================
# MAITAI LAB PROFILE - COMPLETE HARDWARE STACK
# ============================================================================
# This feature flag enables ALL real hardware on the maitai machine.
# CRITICAL: This must include EVERY hardware driver, not just PVCAM!
#
# Build command: bash scripts/build-maitai.sh
# or manually: cargo build --release -p daq-bin --features maitai
#
# Enabled drivers:
#   - pvcam_hardware    : Real PVCAM SDK (Prime BSI camera)
#   - comedi_hardware   : NI PCI-MIO-16XE-10 DAQ card
#   - thorlabs          : ELL14 rotation mounts (rotators 2, 3, 8)
#   - newport           : ESP300 motion controller (axis 1, 2, 3)
#   - spectra_physics   : MaiTai Ti:Sapphire laser
#   - newport_power_meter : Newport 1830-C optical power meter
#   - serial            : Base serial port communication
#
# Expected devices (9+ total):
#   1. prime_bsi (PVCAM camera)
#   2. photodiode, ni_daq_ao0 (Comedi DAQ channels)
#   3. maitai (laser)
#   4. power_meter (Newport 1830-C)
#   5. rotator_2, rotator_3, rotator_8 (ELL14 rotators)
#   6. esp300_axis1, esp300_axis2, esp300_axis3 (Newport motion)
# ============================================================================
maitai = [
    "pvcam_hardware",              # Real PVCAM SDK (NOT mock)
    "comedi_hardware",             # NI DAQ card (NOT mock)
    "rust_daq/thorlabs",           # ELL14 rotators
    "rust_daq/newport",            # ESP300 motion controller
    "rust_daq/spectra_physics",    # MaiTai laser
    "rust_daq/newport_power_meter",# 1830-C power meter
    "rust_daq/serial"              # Serial port base
]

[package.metadata.cargo-machete]
ignored = ["daq-hardware"]  # Needed for pvcam feature passthrough
