[package]
name = "daq-core"
version = "0.1.0"
edition = "2021"
description = "Core types and traits for rust-daq"
build = "build.rs"

[dependencies]
bytes = "1.11"
parking_lot = "0.12"
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
anyhow.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
async-trait.workspace = true
futures.workspace = true
tracing.workspace = true
schemars = { version = "0.8", optional = true } # If needed for schema generation
config = { version = "0.14.0", features = ["toml"] }
arrow = { version = "57", optional = true, features = ["ipc"] }
daq-pool = { path = "../daq-pool" }
sha2 = "0.10"  # For graph file hashing
regex-lite = "0.1"  # Lightweight regex for log scrubbing

# Serial port support (optional, for driver crates)
tokio-serial = { version = "5.4", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["sync", "macros", "rt", "time", "io-util"] }
hostname = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, default-features = false, features = ["sync", "macros"] }
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.10", features = ["js"] }
wasm-timer = "0.2"

[build-dependencies]
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
tracing-subscriber = "0.3.22"

[features]
storage_arrow = ["dep:arrow"]
serial = ["dep:tokio-serial"]  # Serial port support for driver crates

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["getrandom", "schemars"]  # getrandom: wasm32 feature enabler; schemars: optional
