[package]
name = "daq-driver-generic"
version = "0.1.0"
edition = "2021"
description = "Generic config-driven serial driver for rust-daq"

[dependencies]
daq-core = { path = "../daq-core" }
daq-plugin-api = { path = "../daq-plugin-api" }
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.12.2"
evalexpr = "11"
toml = "0.9.8"
futures = "0.3"
tokio = { version = "1", features = ["sync", "time", "macros", "io-util"] }
serialport = "4.3.0"
tokio-serial = "5.4"

[dependencies.rhai]
version = "1.19"
features = ["sync"]
optional = true

[features]
default = []
scripting = ["dep:rhai"]

[lints]
workspace = true