[package]
name = "daq-driver-mock"
version = "0.1.0"
edition = "2024"
description = "Mock hardware drivers for testing and simulation in rust-daq"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TheFermiSea/rust-daq"

[dependencies]
# Core dependencies
daq-core = { path = "../daq-core" }
daq-pool = { path = "../daq-pool" }

# Async runtime
tokio = { version = "1", features = ["sync", "time"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
anyhow = "1"

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.9.8"

# Logging
tracing = "0.1"

# Random number generation for error injection
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
