[package]
name = "daq-driver-pvcam"
version = "0.1.0"
edition = "2021"

[dependencies]
daq-core = { path = "../daq-core" }
# daq-hardware = { path = "../daq-hardware" } # Removed to break cycle
pvcam-sys = { path = "pvcam-sys", optional = true }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
futures = "0.3" 
serde_json = "1.0"
arrow = { version = "56", optional = true }

[features]
default = ["mock"]
mock = []
pvcam_hardware = ["dep:pvcam-sys", "pvcam-sys/pvcam-sdk"]
arrow_tap = ["arrow"]
hardware_tests = []

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
arrow = "56"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
lazy_static = "1.4"

# Examples and benchmarks that require specific features (bd-h7wh)
[[example]]
name = "arrow_tap"
required-features = ["arrow_tap"]

[[bench]]
name = "arrow_tap"
harness = false
required-features = ["arrow_tap"]
