[package]
name = "daq-driver-pvcam"
version = "0.1.0"
edition = "2021"

[dependencies]
# NOTE (bd-n80s): This crate depends only on daq-core, NOT daq-hardware.
# daq-hardware depends on daq-driver-pvcam (for the driver implementation),
# so any traits/types needed here must come from daq-core to avoid cycles.
daq-core = { path = "../daq-core" }
pvcam-sys = { path = "pvcam-sys", optional = true }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time"] }
anyhow = "1.0"
tracing = "0.1"
serde_json = "1.0"
arrow = { version = "56", optional = true }

[features]
default = ["mock"]
mock = []
# Real PVCAM SDK integration (requires PVCAM SDK installed)
pvcam_sdk = ["dep:pvcam-sys", "pvcam-sys/pvcam-sdk"]
arrow_tap = ["arrow"]
hardware_tests = []

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
arrow = "56"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
lazy_static = "1.4"
once_cell = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Examples and benchmarks that require specific features (bd-h7wh)
[[example]]
name = "arrow_tap"
required-features = ["arrow_tap"]

[[bench]]
name = "arrow_tap"
harness = false
required-features = ["arrow_tap"]
