[package]
name = "daq-driver-pvcam"
version = "0.1.0"
edition = "2021"

[dependencies]
# NOTE (bd-n80s): This crate depends only on daq-core, NOT daq-hardware.
# daq-hardware depends on daq-driver-pvcam (for the driver implementation),
# so any traits/types needed here must come from daq-core to avoid cycles.
daq-core = { path = "../daq-core" }
daq-pool = { path = "../daq-pool" }
bytes = "1.11"
parking_lot = "0.12"
pvcam-sys = { path = "pvcam-sys", optional = true }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time"] }
anyhow = "1.0"
tracing = "0.1"
serde_json = "1.0"
[features]
default = ["mock"]
mock = []
# Real PVCAM SDK integration (requires PVCAM SDK installed)
pvcam_hardware = ["dep:pvcam-sys", "pvcam-sys/pvcam-sdk"]
pvcam_sdk = ["pvcam_hardware"]
hardware_tests = []

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
lazy_static = "1.4"
once_cell = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lints]
workspace = true
