[package]
name = "daq-driver-red-pitaya"
version = "0.1.0"
edition = "2021"
description = "Red Pitaya FPGA-based PID controller driver for laser power stabilization"
license = "MIT OR Apache-2.0"
keywords = ["daq", "red-pitaya", "pid", "laser", "instrumentation"]

[dependencies]
daq-core = { path = "../daq-core" }
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["sync", "time", "net", "io-util"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = []

[lints]
workspace = true
