[package]
name = "daq-driver-spectra-physics"
version = "0.1.0"
edition = "2021"
description = "Spectra-Physics MaiTai Ti:Sapphire laser driver for rust-daq"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TheFermiSea/rust-daq"

[dependencies]
# Core dependencies (DriverFactory trait, capabilities)
daq-core = { path = "../daq-core", features = ["serial"] }

# Async runtime
tokio = { version = "1", features = ["sync", "time", "io-util", "rt"] }
async-trait = "0.1"
futures = "0.3"

# Serial communication
tokio-serial = "5.4"
serialport = "4"

# Error handling
anyhow = "1"
thiserror = "1"

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.9.8"

# Logging
tracing = "0.1"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
