[package]
name = "daq-egui"
version = "0.1.0"
edition = "2021"
description = "egui-based control panel for rust-daq"

[lib]
name = "daq_egui"
path = "src/lib.rs"

[[bin]]
name = "rust-daq-gui"
path = "src/main.rs"

[[bin]]
name = "daq-rerun"
path = "src/main_rerun.rs"
required-features = ["rerun_viewer"]

[dependencies]
# egui ecosystem (used by standalone GUI)
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
], optional = true }
egui = "0.31"
egui_extras = { version = "0.31", features = ["all_loaders"], optional = true }

# Rerun for embedded viewer
rerun = { version = "0.27.3", default-features = false, features = [
    "native_viewer",
    "sdk",
    "server",
], optional = true }
mimalloc = { version = "0.1", optional = true }
# For casting pixel data bytes in gRPC streaming
bytemuck = { version = "1.14", optional = true }

# gRPC client
daq-proto = { path = "../daq-proto" }
tonic = { version = "0.10", default-features = false, features = ["transport", "prost", "codegen"] }
prost = "0.12"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }

# Error handling and utilities
anyhow = "1.0"
tracing = "0.1"
once_cell = "1.19"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
serde_json = "1.0"
futures = "0.3"

# Local PVCAM driver (only needed if running daemon locally, not for gRPC streaming)
daq-core = { path = "../daq-core", optional = true }
daq-driver-pvcam = { path = "../daq-driver-pvcam", optional = true }

[features]
default = ["standalone"]
standalone = ["dep:eframe", "dep:egui_extras"]
# Embedded Rerun viewer with gRPC camera streaming support
rerun_viewer = ["dep:rerun", "dep:mimalloc", "dep:bytemuck"]

# Local PVCAM driver support (for running daemon locally)
# - instrument_photometrics: enables mock mode (no SDK required)
# - pvcam_hardware: enables real hardware mode (requires PVCAM SDK)
instrument_photometrics = ["dep:daq-core", "dep:daq-driver-pvcam"]
pvcam_hardware = ["instrument_photometrics", "daq-driver-pvcam/pvcam_hardware"]
